fix(ui): when to hide on small screens (#238)

--- a/src/pages/home/previews/artplayer.css
+++ b/src/pages/home/previews/artplayer.css
@@ -1,7 +1,7 @@
 /* Some custom styles for ArtPlayer */
 
 /* Hide previous and next buttons on small screens */
-@media (max-width: 420px) {
+@media (max-width: 440px) {
   .art-control.art-control-previous-button,
   .art-control.art-control-next-button {
     display: none;
@@ -9,7 +9,7 @@
 }
 
 /* Hide time on smaller screens */
-@media (max-width: 340px) {
+@media (max-width: 360px) {
   .art-control.art-control-time {
     display: none;
   }
